js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/js-module-b-new.js
(function (_) {
  'use strict';
  function externalDemoFunction() { return 2; }

  _.externalDemoFunction = externalDemoFunction;

  return _
}(module.exports));
